src/test/ui/c_ffi_const.stderr
error[E0725]: `#[c_ffi_const]` may only be used on foreign functions
  --> $DIR/c_ffi_const.rs:5:1
   |
LL | #[c_ffi_const] //~ ERROR `#[c_ffi_const]` may only be used on foreign functions [E0725]
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0725`.
